[package]
name = "async-log-watcher"
version = "0.1.0"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.8.0", features = ["unstable"]}
async-fs = "1.5.0"
futures-lite = "1.11.2"

[dev-dependencies]
rand = "0.7.3"
async-std = {version = "1.8.0", features = ["unstable", "attributes"]}
futures-lite = "1.11.2"

