[package]
name = "async-log-watcher"
version = "0.1.0"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["fs", "io-util", "sync", "time", "parking_lot"]}
parking_lot = "0.12.0"

[dev-dependencies]
tokio = {version = "1", features = ["fs", "io-util", "sync", "time", "rt", "macros", "parking_lot"]}
rand = "*"