[package]
name = "async-log-watcher"
version = "0.0.1"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["fs", "io-util", "sync", "time"]}

[dev-dependencies]
tokio = {version = "1", features = ["fs", "io-util", "sync", "time", "rt", "macros", "parking_lot"]}
rand = "0.8"